<resources>
    <string name="app_name">Application Test</string>
    <string name="title_activity_lab">LabActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_acceuil">AcceuilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OCaml corp</string>
    <string name="nav_header_subtitle">The functional game</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_reset">Reset Save</string>
    <string name="NG">New Game +</string>
    <string name="Cheat">Devellopper Cheat</string>

    <string name="menu_home">Home</string>
    <string name="menu_tavern">La Taverne</string>
    <string name="menu_lab">Laboratoire</string>
    <string name="menu_cave">Camel Cave</string>
    <string name="menu_test">Test Ground</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
