<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.applicationtest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_lab"
            app:destination="@id/nav_lab" />
        <action
            android:id="@+id/action_nav_home_to_nav_test"
            app:destination="@id/nav_test" />
        <action
            android:id="@+id/action_nav_home_to_nav_cave"
            app:destination="@id/nav_cave" />
        <action
            android:id="@+id/action_nav_home_to_nav_share"
            app:destination="@id/nav_share" />
        <action
            android:id="@+id/action_nav_home_to_nav_send"
            app:destination="@id/nav_send" />
    </fragment>

    <fragment
        android:id="@+id/nav_lab"
        android:name="com.example.applicationtest.ui.gallery.GalleryFragment"
        android:label="@string/menu_lab"
        tools:layout="@layout/fragment_lab">
        <action
            android:id="@+id/action_home_to_lab"
            app:destination="@+id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@+id/fragment_lab"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_cave"
        android:name="com.example.applicationtest.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cave"
        tools:layout="@layout/fragment_cave">
        <action
            android:id="@+id/action_home_to_cave"
            app:destination="@+id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@+id/fragment_cave"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_cave_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.applicationtest.ui.tools.ToolsFragment"
        android:label="@string/menu_test"
        tools:layout="@layout/fragment_test">
        <action
            android:id="@+id/action_home_to_test"
            app:destination="@+id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@+id/fragment_lab"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.applicationtest.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share">
        <action
            android:id="@+id/action_nav_share_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.applicationtest.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send">
        <action
            android:id="@+id/action_nav_send_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>